--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
 
 body {
     margin: 0;
-    font-family: Bebas Nueu, sans-serif;
+    font-family: Bebas Neue, sans-serif;
     background-color: whitesmoke;
 }
 
